mdbook-source-code/index_without_hooq/tests/snapshots/test__index_without_hooq_with_app_port.snap
---
source: mdbook-source-code/index_without_hooq/tests/test.rs
expression: "format!(\"STDOUT:\\n{}\\nSTDERR:\\n{}\", stdout, stderr)"
---
STDOUT:

STDERR:
Error: NotPresent
