mdbook-source-code/index_without_hooq/tests/snapshots/test__index_without_hooq_with_envs.snap
---
source: mdbook-source-code/index_without_hooq/tests/test.rs
expression: "format!(\"STDOUT:\\n{}\\nSTDERR:\\n{}\", stdout, stderr)"
---
STDOUT:
Server is running on: 127.0.0.1:10

STDERR:
